--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,16 +4,18 @@
       <input
         matInput
         placeholder="Enter a book title"
-        [value]="$search.searchText"
-        (input)="onSearchInputChange($event)"
+        [formControl]="searchText"
+        required
       />
-      <button mat-icon-button matSuffix (click)="$search.submit()">
+      <button mat-icon-button matSuffix (click)="onSearchClick()">
         <mat-icon>search</mat-icon>
       </button>
     </mat-form-field>
   </form>
+
+  @if (searchResults$ | async; as searchResults) {
   <mat-list role="list" class="flex-grow min-h-0 overflow-y-auto">
-    @for (result of (searchResults$ | async)?.docs; track result.title) {
+    @for (result of searchResults.docs; track result.title) {
     <mat-list-item role="listitem">
       <img
         matListItemAvatar
@@ -28,14 +30,17 @@
     </mat-list-item>
     }
   </mat-list>
-  @if ((searchResults$ | async)?.num_found) {
+
+  @if (searchResults.num_found) {
   <mat-paginator
     class="border-0 border-t border-black border-solid"
-    [length]="(searchResults$ | async)?.num_found ?? 0"
-    [pageIndex]="$search.page - 1"
+    [length]="searchResults.num_found"
+    [pageIndex]="$search.page! - 1"
     [pageSize]="$search.pageSize"
-    (page)="$search.page = $event.pageIndex + 1"
+    [pageSizeOptions]="[5, 10, 25, 100]"
+    (page)="onPageChange($event)"
     aria-label="Select page"
   />
   }
+}
 </div>
